--- a/home/templates/home/edit.html
+++ b/home/templates/home/edit.html
@@ -19,17 +19,10 @@
                             {% tpl_button button_label class='is-success' %}
                         </div>
                         <div>
-                            {% trans 'Logout' as button_label %}
-                            {% url 'logout' as button_link %}
-                            {% tpl_button button_label button_link class='is-warning' %}
-                        </div>
-                        {% comment %}
-                        <div>
                             {% trans 'Cancel' as button_label %}
-                            {% url 'dashboard__main' as button_link %}
+                            {% url 'member__main' username=user.username as button_link %}
                             {% tpl_button button_label button_link class='is-secondary' %}
                         </div>
-                        {% endcomment %}
                     </div>
                     <div class="o-flex-inline has-horizontal-gutter">
                         <div>
