--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,12 +1,17 @@
 {% extends 'home/base.html' %}
 {% load static i18n tpl_button tpl_trail_preview %}
 
-{% block title %}{% trans 'Dashboard' %}{% endblock %}
+{% block title %}
+    {% blocktrans trimmed with user=user.username %}
+        {{ user }}'s dashborad
+    {% endblocktrans %}
+{% endblock %}
 
 {% block content %}
     <div class="o-section">
         <div class="o-group is-large">
-            <h1>{% trans 'Your last trails' %}</h1>
+            <h1>{% trans 'Dashboard' %}</h1>
+            <h2>{% trans 'Your last trails' %}</h2>
             <ul class="o-flex has-gutter is-multiline">
                 {% for trail in user_trails %}
                     {% url 'trail__main' trail.id as trail_url %}
