fix donnation link

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -55,7 +55,7 @@
         <p>
         {% blocktrans trimmed %}
             Developing and hosting a great web applicable is fun, but not free. If you love Mountain Bikers Club please consider
-            <a href="https://liberapay.com/cedeber" target="_blank" rel="noopener">helping me for the price of few cafes</a>.
+            <a href="https://www.buymeacoffee.com/cedeber" target="_blank" rel="noopener">helping me for the price of few cafes</a>.
             Thank you very much!
         {% endblocktrans %}
         </p>
