Customize authentication - rename home to discover - email is mandatory - add trails favorites

--- a/discover/static/discover/styles/trail.css
+++ b/discover/static/discover/styles/trail.css
@@ -94,6 +94,10 @@
     color: var(--yellow)
 }
 
+.trail__favorite .is-favorite {
+    color: var(--red);
+}
+
 .trail__statistics-grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
