--- a/discover/templates/home/base.html
+++ b/discover/templates/home/base.html
@@ -30,15 +30,15 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-tap-highlight" content="no">
 
-    <link rel="preload" href="{% static 'home/styles/shell.css' %}" as="style">
-    <link rel="preload" href="{% static 'home/styles/base.css' %}" as="style">
-    <link rel="preload" href="{% static 'home/styles/trail.css' %}" as="style">
-    <link rel="preload" href="{% static 'home/webfonts/3755DA_2_0.woff2' %}" as="font">
-    <link rel="preload" href="{% static 'home/scripts/main.js' %}" as="script">
+    <link rel="preload" href="{% static 'discover/styles/shell.css' %}" as="style">
+    <link rel="preload" href="{% static 'discover/styles/base.css' %}" as="style">
+    <link rel="preload" href="{% static 'discover/styles/trail.css' %}" as="style">
+    <link rel="preload" href="{% static 'discover/webfonts/3755DA_2_0.woff2' %}" as="font">
+    <link rel="preload" href="{% static 'discover/scripts/main.js' %}" as="script">
 
-    <link rel="stylesheet" href="{% static 'home/styles/shell.css' %}">
-    <link rel="stylesheet" href="{% static 'home/styles/base.css' %}">
-    <link rel="stylesheet" href="{% static 'home/styles/trail.css' %}">
+    <link rel="stylesheet" href="{% static 'discover/styles/shell.css' %}">
+    <link rel="stylesheet" href="{% static 'discover/styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'discover/styles/trail.css' %}">
 
     <!-- Web App Manifest -->
     {# <link rel="manifest" href="{% static "hello/webapp.manifest" %}">#}
@@ -140,5 +140,5 @@
         </ul>
     </footer>
 </div>
-<script async type="module" src="{% static "home/scripts/main.js" %}"></script>
+<script async type="module" src="{% static "discover/scripts/main.js" %}"></script>
 </body>
