move templates + link to password_reset

--- a/discover/templates/discover/base.html
+++ b/discover/templates/discover/base.html
@@ -44,7 +44,7 @@
     {# <link rel="manifest" href="{% static "hello/webapp.manifest" %}">#}
 </head>
 <body>
-{% include 'home/symbols.html' %}
+{% include 'discover/symbols.html' %}
 <div class="o-view">
     <div class="support-bar o-flex-inline">
         <div class="o-flex-middle" style="flex: 0; margin-right: 10px;">
