--- a/member/templates/member/main.html
+++ b/member/templates/member/main.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load static i18n tpl_button tpl_trail_preview %}
 
 {% block title %}{% trans 'Profile' %}{% endblock %}
