--- a/trail/templates/trail/new.html
+++ b/trail/templates/trail/new.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load i18n tpl_button %}
 
 {% block title %}Upload a GPX file{% endblock %}
