--- a/discover/templates/flatpages/default.html
+++ b/discover/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load i18n %}
 
 {% block title %}{{ flatpage.title }}{% endblock %}
