--- a/member/templates/member/login.html
+++ b/member/templates/member/login.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load i18n tpl_button %}
 
 {% block title %}{% trans 'Sign in' %}{% endblock %}
@@ -18,6 +18,12 @@
                     {% tpl_button button_label class='is-success' %}
                     <input type="hidden" name="next" value="{{ next }}">
                 </form>
+                <p><!-- empty --></p>
+                <p>
+                    <a href="{% url 'password_reset' %}">
+                        {% trans 'Forgotten your password?' %}
+                    </a>
+                </p>
             </div>
             <div class="cell-1of3"><!-- empty --></div>
         </div>
