--- a/member/templates/member/register.html
+++ b/member/templates/member/register.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load i18n tpl_button %}
 
 {% block title %}{% trans 'Create an account' %}{% endblock %}
