--- a/trail/templates/trail/main.html
+++ b/trail/templates/trail/main.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'discover/base.html' %}
 {% load static i18n tpl_button tpl_trail_map filter_gpx %}
 
 {% block title %}{{ trail.name|default:'Trail' }}{% endblock %}
