--- a/member/templates/member/edit.html
+++ b/member/templates/member/edit.html
@@ -1,41 +1,27 @@
 {% extends 'discover/base.html' %}
 {% load i18n tpl_button %}
 
-{% block title %}{% blocktrans with user=user.get_full_name|default:user.username %}{{ user }}'s profile
-{% endblocktrans %}{% endblock %}
+{% block title %}{% trans 'Edit profile' %}{% endblock %}
 
 {% block content %}
     <div class="o-section">
         <div class="o-group o-flex-inline is-large">
             <div class="cell-2of3">
-                <h1>
-                    {% blocktrans trimmed with user=user.get_short_name|default:user.username %}
-                        {{ user }}'s profile
-                    {% endblocktrans %}
-                </h1>
+                <h1>{% trans 'Edit profile' %}</h1>
                 <form action="{% url 'member__edit' %}" method="post">
                     {% csrf_token %}
                     <ul class="django__form">
                         {{ form.as_ul }}
                     </ul>
-                    <div class="o-flex-space has-horizontal-gutter">
-                        <div class="o-flex-inline has-horizontal-gutter">
-                            <div>
-                                {% trans 'Save' as button_label %}
-                                {% tpl_button button_label class='is-success' %}
-                            </div>
-                            <div>
-                                {% trans 'Cancel' as button_label %}
-                                {% url 'member__main' username=user.username as button_link %}
-                                {% tpl_button button_label button_link class='is-secondary' %}
-                            </div>
+                    <div class="o-flex-inline has-horizontal-gutter">
+                        <div>
+                            {% trans 'Save' as button_label %}
+                            {% tpl_button button_label class='is-success' %}
                         </div>
-                        <div class="o-flex-inline has-horizontal-gutter">
-                            <div>
-                                {% trans 'Delete my account' as button_label %}
-                                {% url 'member__delete' as button_link %}
-                                {% tpl_button button_label button_link class='is-danger' %}
-                            </div>
+                        <div>
+                            {% trans 'Cancel' as button_label %}
+                            {% url 'member__main' username=user.username as button_link %}
+                            {% tpl_button button_label button_link class='is-secondary' %}
                         </div>
                     </div>
                 </form>
