--- a/trail/templates/trail/tag_trail_map.html
+++ b/trail/templates/trail/tag_trail_map.html
@@ -5,18 +5,9 @@
         import { loadJS, loadCSS } from '{% static 'discover/scripts/library/async-loader.js' %}';
 
         (async function() {
-            await loadCSS(
-                'https://unpkg.com/leaflet@1.3.3/dist/leaflet.css',
-                true,
-                'sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==',
-            );
-
-            await loadJS(
-                'https://unpkg.com/leaflet@1.3.3/dist/leaflet.js',
-                true,
-                'sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==',
-            );
-
+            await loadCSS('{% static 'trail/leaflet.css' %}');
+            await loadJS('{% static 'trail/leaflet.js' %}');
+            // TODO build our own loader from DB
             await loadJS('https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.4.0/gpx.min.js', true);
 
             const myMap = L.map('map-{{ uid }}', {
