--- a/trail/templates/trail/tag_trail_map.html
+++ b/trail/templates/trail/tag_trail_map.html
@@ -15,6 +15,8 @@
                     zoomControl: false,
                     attributionControl: false,
                     dragging: false,
+                {% else %}
+                    dragging: !L.Browser.mobile,
                 {% endif %}
                 scrollWheelZoom: false,
             });
